# forgeio

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  config_multi_opcua.toml  config_original.toml  run_gateway_and_admin.sh
.github/workflows/: ci.yml
docs/: index.md  opcua_implementation.md
examples/: dummy_opcua_server.py
frontend_design_env/: Cargo.toml
frontend_design_env/src/: lib.rs
gateway_server/: Cargo.toml
gateway_server/examples/: dummy_opcua_server.rs
gateway_server/pki/own/: cert.der
gateway_server/pki/private/: private.pem
gateway_server/src/: lib.rs  logging.rs  main.rs
gateway_server/src/api/: mod.rs  rest.rs  websocket.rs
gateway_server/src/config/: mod.rs  settings.rs
gateway_server/src/drivers/: mod.rs  opcua.rs  traits.rs
gateway_server/src/tags/: engine.rs  mod.rs  structures.rs
gateway_server/tests/: README.md  api_integration.rs  opcua_driver.rs  opcua_driver_extended.rs  performance_tests.rs  tag_engine.rs  tag_engine_extended.rs  test_utils.rs
pki/own/: cert.der
pki/private/: private.pem
webui/: README.md  index.html  package-lock.json  package.json  tsconfig.json
webui/src/: App.css  App.tsx  Dashboard.tsx  OpcUaBrowserPage.tsx  TagsPage.tsx
wiki/: Contributing.md  Home.md  OPC-UA-Implementation.md  Tag-Engine-Usage.md
