[package]
name = "gateway_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] } # Async runtime
axum = "0.7" # Web framework
async-trait = "0.1" # For async traits
config = { version = "0.14", features = ["toml"] } # Configuration loading
serde = { version = "1.0", features = ["derive"] } # Serialization/Deserialization
dashmap = "5.5" # Concurrent HashMap
async-opcua = { version = "0.16", features = ["client", "server"] } # OPC UA Client and Server Library
serde_json = "1.0"  # Added for JSON serialization in API endpoints
tokio-tungstenite = "0.26.2"  # Added to resolve unresolved import in websocket.rs
tower-http = { version = "0.5", features = ["fs", "auth"] } # Static file serving and auth middleware
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
toml = "0.8" # For writing configuration

[dev-dependencies]
futures = "0.3"
base64 = "0.22"
tower = "0.5"
